--- a/public/locales/es/cleanrooms.json
+++ b/public/locales/es/cleanrooms.json
@@ -4,24 +4,25 @@
     "description": "Diseño, fabricación e instalación de cuartos limpios industriales. Soluciones profesionales con certificación ISO para industrias farmacéutica, electrónica y alimentaria en México."
   },
   "hero": {
-    "badge": "StarFilters - Expertos en ambientes controlados",
-    "title": "Cuartos Limpios de Clase Mundial para tu Industria",
-    "description": "Diseñamos, fabricamos e instalamos cuartos limpios industriales con certificación ISO 14644. Soluciones integrales para industrias farmacéutica, electrónica, alimentaria y de investigación que requieren ambientes controlados de la más alta calidad."
+    "badge": "Acerca de nosotros",
+    "title": "Cuartos limpios certificados para procesos críticos",
+    "description": "En Star Filters diseñamos, construimos y validamos cuartos limpios certificados bajo normas ISO 14644 y GMP, garantizando procesos seguros, precisos y reproducibles."
   },
-  "experience": {
-    "title": "Nuestra Experiencia",
-    "paragraph1": "Con más de 15 años en el mercado mexicano, StarFilters se ha consolidado como líder en el diseño y construcción de cuartos limpios para industrias que demandan los más altos estándares de pureza. Nuestros cuartos limpios cumplen con clasificaciones desde ISO Clase 1 hasta ISO Clase 9, adaptándonos a las necesidades específicas de cada cliente.",
-    "paragraph2": "Trabajamos con materiales de última generación, paneles modulares de alta densidad, sistemas de filtración HEPA/ULPA y controles ambientales avanzados. Cada proyecto incluye validación completa, documentación técnica y certificación conforme a normativas internacionales como FDA, GMP y EU GMP para garantizar el cumplimiento regulatorio de tu operación."
+  "quality": {
+    "title": "Calidad certificada",
+    "paragraph1": "Un cuarto limpio o sala blanca es un entorno especializado diseñado para controlar partículas en el aire, microorganismos y contaminantes, manteniendo condiciones hasta 50,000 veces más limpias que un ambiente estándar.",
+    "paragraph2": "Star Filters ofrece soluciones integrales de cuartos limpios llave en mano, con avanzados sistemas de filtración HEPA, flujos de aire de alta eficiencia y control preciso de temperatura, humedad y presión diferencial.",
+    "paragraph3": "Atendemos sectores como la industria farmacéutica, biotecnológica, electrónica, de dispositivos médicos y automotriz, cumpliendo los estándares internacionales más exigentes. Desde la ingeniería y el diseño arquitectónico hasta la validación y el monitoreo ambiental, garantizamos ambientes controlados y certificados, donde la calidad del aire define la calidad del producto."
   },
   "numbers": {
     "title": "Nuestros Números",
-    "installations": "Cuartos Limpios Instalados",
-    "installationsNumber": "120+",
+    "installations": "Cuartos Limpios Construidos",
+    "installationsNumber": "120",
+    "experience": "Años de Experiencia",
+    "experienceNumber": "40",
     "area": "Metros Cuadrados Construidos",
-    "areaNumber": "25K+",
-    "certifications": "Certificaciones Emitidas",
-    "certificationsNumber": "95%",
-    "warranty": "Años de Garantía",
-    "warrantyNumber": "5"
+    "areaNumber": "20K",
+    "errorMargin": "Margen de Error en Producción",
+    "errorMarginNumber": "0%"
   }
 }
