feat: actualizar contenido y diseño del sitio
- Header: cambiar 'Servicios' por 'Servicios de validación'
- Hero: actualizar título a 'Control de partículas para tu proceso industrial'
- Hero: cambiar imagen de promoción por 'Cuarto Limpio ISO 14644'
- Hero: enlace 'Conocer más' ahora abre página 'Acerca de' en nueva pestaña
- Bento Grid: cambiar subtítulo a 'Tus aliados en control de partículas'
- Bento Grid: actualizar títulos (Validación con V mayúscula, Accesorios para Cuartos Limpios)
- Bento Grid: hacer secciones clickeables con enlaces a páginas correspondientes
- Bento Grid: quitar fondos azules y unificar diseño de imágenes
- Bento Grid: actualizar imágenes (Cuarto Limpio Sala Blanca, Validación Cuartos Limpios)
- Footer: quitar logos de X y GitHub
- Footer: actualizar texto descriptivo
- Footer: quitar 'Blog' duplicado de sección Empresa
- Logo Section: reemplazar imagen única por logos individuales de clientes
- FAQs: reemplazar todas las preguntas con 7 nuevas FAQs actualizadas
- Agregar página 'Acerca de' en español e inglés con historia, misión, visión y valores

--- a/public/locales/en/common.json
+++ b/public/locales/en/common.json
@@ -3,7 +3,7 @@
     "home": "Home",
     "filters": "Filters",
     "cleanrooms": "Cleanrooms",
-    "services": "Services",
+    "services": "Validation Services",
     "blog": "Blog",
     "cart": "Cart",
     "profile": "Profile",
